Partially implemented child routes for users and posts.

--- a/app/navbar.component.html
+++ b/app/navbar.component.html
@@ -17,9 +17,9 @@
         <li [class.active]="isCurrentRoute(['Users'])">
           <a [routerLink]="['Users']">Users</a>
         </li>
-        <li [class.active]="isCurrentRoute(['Posts'])">
+        <!--<li [class.active]="isCurrentRoute(['Posts'])">
           <a [routerLink]="['Posts']">Posts</a>
-        </li>
+        </li>-->
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
