--- a/app/users/users-list.component.html
+++ b/app/users/users-list.component.html
@@ -1,6 +1,6 @@
 <p>
     <!--<a href="/users/new" class="btn btn-primary">Add a User</a>-->
-    <a [routerLink]="['AddUser']" class="btn btn-primary">Add a User</a>
+    <!--<a [routerLink]="['AddUser']" class="btn btn-primary">Add a User</a>-->
 </p>
 <table class="table table-bordered">
     <thead>
