Further progress with creating a user.

--- a/app/users/add-user.component.html
+++ b/app/users/add-user.component.html
@@ -1,7 +1,7 @@
 <h2>Add a User</h2>
 <div class="row">
     <div class="col-md-6 well">
-        <form [ngFormModel]="addUserForm" (ngSubmit)="onSubmit(addUserForm)">
+        <form [ngFormModel]="addUserForm" (ngSubmit)="onSubmit(addUserForm.value)">
             <fieldset>
                 <legend>General</legend>
                 <div class="form-group">
