Completed the functionality to create a user.

--- a/app/users/create-user.component.html
+++ b/app/users/create-user.component.html
@@ -1,4 +1,4 @@
-<h2>Add a User</h2>
+<h3>Create a User</h3>
 <div class="row">
     <div class="col-md-6 well">
         <form [ngFormModel]="addUserForm" (ngSubmit)="onSubmit(addUserForm.value)">
