--- a/app/users/user-form.component.html
+++ b/app/users/user-form.component.html
@@ -1,12 +1,12 @@
-<h3>Create a User</h3>
+<h3>{{ pageTitle }}</h3>
 <div class="row">
     <div class="col-md-6 well">
-        <form [ngFormModel]="addUserForm" (ngSubmit)="onSubmit(addUserForm.value)">
+        <form [ngFormModel]="userForm" (ngSubmit)="onSubmit(userForm.value)">
             <fieldset>
                 <legend>General</legend>
                 <div class="form-group">
                     <label for="name" class="control-label">Name</label>
-                    <input id="name" class="form-control" type="text" placeholder="full name" ngControl="name" #name="ngForm">
+                    <input id="name" class="form-control" type="text" placeholder="full name" ngControl="name" #name="ngForm" [(ngModel)]="user.name">
                     <div *ngIf="name.touched && !name.valid"
                         class="alert alert-danger" role="alert">
                         Name is required
@@ -14,7 +14,7 @@
                 </div>
                 <div class="form-group">
                     <label for="email" class="control-label">Email</label>
-                    <input id="email" class="form-control" type="email" placeholder="name@domain.com" ngControl="email" #email="ngForm">
+                    <input id="email" class="form-control" type="email" placeholder="name@domain.com" ngControl="email" #email="ngForm" [(ngModel)]="user.email">
                     <div *ngIf="email.touched && !email.valid"
                         class="alert alert-danger" role="alert">
                         Enter a valid email address
@@ -22,30 +22,30 @@
                 </div>
                 <div class="form-group">
                     <label for="phone" class="control-label">Phone</label>
-                    <input id="phone" class="form-control" type="tel" placeholder="contact number" ngControl="phone" #phone="ngForm">
+                    <input id="phone" class="form-control" type="tel" placeholder="contact number" ngControl="phone" #phone="ngForm" [(ngModel)]="user.phone">
                 </div>
             </fieldset>
             <fieldset ngControlGroup="address">
                 <legend>Address</legend>
                 <div class="form-group">
                     <label for="street" class="control-label">Street</label>
-                    <input id="street" class="form-control" type="text" placeholder="street name" ngControl="street" #street="ngForm">
+                    <input id="street" class="form-control" type="text" placeholder="street name" ngControl="street" #street="ngForm" [(ngModel)]="user.address.street">
                 </div>
                 <div class="form-group">
                     <label for="suite" class="control-label">Suite</label>
-                    <input id="suite" class="form-control" type="text" placeholder="suite number" ngControl="suite" #suite="ngForm">
+                    <input id="suite" class="form-control" type="text" placeholder="suite number" ngControl="suite" #suite="ngForm" [(ngModel)]="user.address.suite">
                 </div>
                 <div class="form-group">
                     <label for="city" class="control-label">City</label>
-                    <input id="city" class="form-control" type="text" placeholder="city name" ngControl="city" #city="ngForm">
+                    <input id="city" class="form-control" type="text" placeholder="city name" ngControl="city" #city="ngForm" [(ngModel)]="user.address.city">
                 </div>
                 <div class="form-group">
                     <label for="zip-code" class="control-label">Zip Code</label>
-                    <input id="zip-code" class="form-control" type="text" placeholder="zip code" ngControl="zip" #zip="ngForm">
+                    <input id="zip-code" class="form-control" type="text" placeholder="zip code" ngControl="zip" #zip="ngForm" [(ngModel)]="user.address.zip">
                 </div>
             </fieldset>
             <div class="form-group">
-                <button type="submit" class="btn btn-success" [disabled]="!addUserForm.valid">Save</button>
+                <button type="submit" class="btn btn-success" [disabled]="!userForm.valid">Save</button>
             </div>
         </form>
     </div>
