Added posts module. Add listing of posts. Added master-detail for posts. Add shared spinner component.

--- a/app/users/users-list.component.html
+++ b/app/users/users-list.component.html
@@ -1,7 +1,8 @@
 <p>
     <a [routerLink]="['CreateUser']" class="btn btn-primary">Create User</a>
 </p>
-<table class="table table-bordered">
+<spinner [visible]="isLoading"></spinner>
+<table class="table table-bordered" *ngIf="!isLoading">
     <thead>
         <tr>
             <th>Name</th>
