--- a/app/posts/posts-list.component.html
+++ b/app/posts/posts-list.component.html
@@ -7,6 +7,25 @@
         </ul>
     </div>
     <div class="col-md-6" *ngIf="selectedPost">
-        <post-details [post]="selectedPost"></post-details>
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h3 class="panel-title">{{ selectedPost.title }}</h3>
+            </div>
+            <div class="panel-body">
+                {{ selectedPost.body }}
+                <hr>
+                <!-- Comments -->
+                <spinner [visible]="commentsLoading"></spinner>
+                <div class="media" *ngFor="let comment of comments">
+                <div class="media-left media-middle">
+                    <img class="media-object comment-img" src="http://lorempixel.com/80/80/people?random={{ comment.id }}" alt="commenters image">
+                </div>
+                <div class="media-body">
+                    <h4 class="media-heading">{{ comment.name }}</h4>
+                        {{ comment.body }}
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
