--- a/app/posts/posts-list.component.html
+++ b/app/posts/posts-list.component.html
@@ -1,6 +1,14 @@
 <h3>Posts</h3>
 <div class="row">
     <div class="col-md-6">
+        <select class="form-control" #uId (change)="getUsersPosts(uId.value)">
+            <option value="0" selected>Select a user...</option>
+            <option *ngFor="let user of users" value="{{ user.id }}">{{ user.name }}</option>
+        </select>
+    </div>
+</div>
+<div class="row top-buffer">
+    <div class="col-md-6">
         <spinner [visible]="isLoading"></spinner>
         <ul class="list-group">
             <li class="list-group-item" *ngFor="let post of posts" (click)="postSelected(post)" [class.active]="selectedPost == post">{{ post.title }}</li>
