Added the pagination functionality to the posts.

--- a/app/posts/posts-list.component.html
+++ b/app/posts/posts-list.component.html
@@ -10,8 +10,9 @@
 <div class="row top-buffer">
     <div class="col-md-6">
         <spinner [visible]="postsLoading"></spinner>
+        <pagination [items]="posts" (page-changed)="onPageChanged($event)"></pagination>
         <ul class="list-group">
-            <li class="list-group-item" *ngFor="let post of posts" (click)="postSelected(post)" [class.active]="selectedPost == post">{{ post.title }}</li>
+            <li class="list-group-item" *ngFor="let post of pagedPosts" (click)="postSelected(post)" [class.active]="selectedPost == post">{{ post.title }}</li>
         </ul>
     </div>
     <div class="col-md-6" *ngIf="selectedPost">
